<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.ifmo.droid2016.korchagin.multicheckin.MainActivity"
    tools:showIn="@layout/activity_main"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/step2_hint"
        android:id="@+id/commentText"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/step2_image"
        android:visibility="invisible"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/commentText"
        android:layout_marginBottom="8dp" />

    <TextView
        android:text="@string/step1_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step1_textOr"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/step1_hint"
        app:layout_constraintRight_toRightOf="@+id/step2_image"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:text="@string/hint1_camera"
        android:onClick="selectPhotoFromCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_camera"
        app:layout_constraintTop_toBottomOf="@+id/step1_hint"
        app:layout_constraintRight_toLeftOf="@+id/step1_textOr"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        style="@style/Widget.AppCompat.Button" />

    <Button
        android:text="@string/hint1_file"
        android:onClick="selectPhotoFromFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_file"
        app:layout_constraintTop_toBottomOf="@+id/step1_hint"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/step1_textOr"
        android:layout_marginLeft="8dp"
        style="@style/Widget.AppCompat.Button" />

    <TextView
        android:text="@string/step1_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step1_hint"
        android:visibility="visible"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/step2_image"
        app:layout_constraintVertical_bias="0.6"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:text="@string/step2_undo"
        android:onClick="undoStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step2_undo"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/step2_image"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>
